WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140669
Fix 'register' storage class specifier is deprecated warning
https://bugs.webkit.org/show_bug.cgi?id=140669
Summary
Fix 'register' storage class specifier is deprecated warning
Csaba Osztrogonác
Reported
2015-01-20 03:35:52 PST
Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:326:5: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register int i;
Attachments
Patch
(2.17 KB, patch)
2015-01-20 03:38 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-01-20 03:38:59 PST
Created
attachment 244980
[details]
Patch
WebKit Commit Bot
Comment 2
2015-01-20 04:33:36 PST
Comment on
attachment 244980
[details]
Patch Clearing flags on attachment: 244980 Committed
r178704
: <
http://trac.webkit.org/changeset/178704
>
WebKit Commit Bot
Comment 3
2015-01-20 04:33:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug