Fix 'register' storage class specifier is deprecated warning https://bugs.webkit.org/show_bug.cgi?id=140669

Reviewed by Carlos Garcia Campos.

* platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
(webKitWebAudioSrcLoop):


Canonical link: https://commits.webkit.org/158634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178704 268f45cc-cd09-0410-ab3c-d52691b4dbfc